--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "ed10e029965dc173",
