--- a/markdownblog/docker-compose.yml
+++ b/markdownblog/docker-compose.yml
@@ -2,11 +2,15 @@ version: '3'
 
 services:
   db:
-    image: postgres:12
-    environment:
-      POSTGRES_PASSWORD: example
+    image: sqlite3
+    
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/markdownblog
+    ports:
+      - '8000:8000'
+    depends_on:
+      - db
+
