--- a/markdownblog/Dockerfile
+++ b/markdownblog/Dockerfile
@@ -10,8 +10,8 @@ RUN apk update \
 
 COPY ./requirements.txt ./
 
-RUN pip install -r requirements.txt
+RUN python -m pip install -r requirements.txt
 
-COPY ./ ./
+COPY ./ app/
 
 CMD [ "python", "manage.py", "runserver", "0.0.0.0:8000"]
